--- a/1.html
+++ b/1.html
@@ -7,28 +7,37 @@
     <meta charset="utf-8">
     <!-- 웹브라우저를 열때 default 값으로 utf-8로 설정,
     한글 표시하게 해줌-->
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <!-- 본문-->
   <body>
     <!--본문은 body로 묶어야함-->
     <h1><a href ="index.html">WEB</a></h1>
+    <div id="grid">
     <ol>
       <a href ="1.html"><li>HTML</a></li>
       <a href ="2.html"><li>CSS</a></li>
       <a href ="3.html"><li>JavaScript</a></li>
     </ol>
     <!--or : ordered list, ul : unordered list -->
-    <h2>HTML</h2>
-    <p>
-      <a href="https://www.w3.org/TR/html51/" target="_blank" title = "html5 specification">Hypertext Markup Language (HTML)</a>
-      <!-- title로 클릭하기 전 설명 부여. target="_blank"는 새로운 페이지로 열게 해줌. 링크를 걸고 싶은 곳에 a태그, href속성 설정 Hypertext reference--> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.
-    </P>
-    <!-- 단락을 나타내는 태그는 p, 단순 줄바꿈은 br -->
-    <img src ="exam1.jpg" width="100%">
-    <!-- 사용하려는 이미지는 workspace에 저장되야함-->
-    <p>
-      Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-    </p>
+      <div id="article">
+        <h2>HTML</h2>
+        <p>
+          <iframe width = '560' height="315" src = "https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen></iframe>
+        </p>
+        <!-- 동영상 삽입기능 -->
+        <p>
+          <a href="https://www.w3.org/TR/html51/" target="_blank" title = "html5 specification">Hypertext Markup Language (HTML)</a>
+          <!-- title로 클릭하기 전 설명 부여. target="_blank"는 새로운 페이지로 열게 해줌. 링크를 걸고 싶은 곳에 a태그, href속성 설정 Hypertext reference--> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.
+        </P>
+        <!-- 단락을 나타내는 태그는 p, 단순 줄바꿈은 br -->
+        <img src ="exam1.jpg" width="100%">
+        <!-- 사용하려는 이미지는 workspace에 저장되야함-->
+        <p>
+          Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+      </p>
+    </div>
+  </div>
   </body>
 </html>
