--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <meta charset="utf-8">
     <!-- 웹브라우저를 열때 default 값으로 utf-8로 설정,
     한글 표시하게 해줌-->
+    <link rel="stylesheet" href="style.css">
+    <!-- 중복의 제거로 코드의 재사용 극대화-->
   </head>
 
   <!-- 본문-->
   <body>
     <!--본문은 body로 묶어야함-->
     <h1><a href ="index.html">WEB</a></h1>
-    <ol>
-      <a href ="1.html"><li>HTML</a></li>
-      <a href ="2.html"><li>CSS</a></li>
-      <a href ="3.html"><li>JavaScript</a></li>
-    </ol>
+    <div id="grid">
+      <ol>
+        <a href ="1.html"><li>HTML</a></li>
+        <a href ="2.html"><li>CSS</a></li>
+        <a href ="3.html"><li>JavaScript</a></li>
+      </ol>
     <!--or : ordered list, ul : unordered list -->
-    <strong>Hello, World</strong>
+      <div id="article">
+        <strong>Hello, World</strong>
+      </div>
+    </div>
   </body>
 </html>
