--- a/3.html
+++ b/3.html
@@ -13,7 +13,9 @@
       document.querySelector('body').style.backgroundColor ='black';
       document.querySelector('body').style.color ='white';">
       <!-- body태그를 선택, 이벤트 발생시-->
-      <input type ="button" value = "day">
+      <input type ="button" value = "day" onclick="
+      document.querySelector('body').style.backgroundColor='white';
+      document.querySelector('body').style.color='black';">
       <div id="grid">
       <ol>
         <a href ="1.html"><li>HTML</a></li>
