--- a/3.html
+++ b/3.html
@@ -9,13 +9,20 @@
   </head>
   <body>
     <h1><a href ="index.html">WEB</a></h1>
-      <input type ="button" value = "night" onclick="
+      <input id="night_day" type="button" value = "night" onclick="
+      if(document.querySelector('#night_day').value === 'night') {
       document.querySelector('body').style.backgroundColor ='black';
-      document.querySelector('body').style.color ='white';">
-      <!-- body태그를 선택, 이벤트 발생시-->
-      <input type ="button" value = "day" onclick="
+      document.querySelector('body').style.color ='white';
+      document.querySelector('#night_day').value = 'day';
+    }
+      else {
       document.querySelector('body').style.backgroundColor='white';
-      document.querySelector('body').style.color='black';">
+      document.querySelector('body').style.color='black';
+      document.querySelector('#night_day').value = 'night';
+    }
+      ">
+      <!-- 버튼의 value값을 지정해주고 그 값을 비교연산자를 통해 비교.
+      그리고 조건문 연산 후, 다음 비교를 위해 반대 값으로 토글시켜줌-->
       <div id="grid">
       <ol>
         <a href ="1.html"><li>HTML</a></li>
